Global Refactoring Of The Project